@@ -15,8 +15,6 @@ import org.springframework.messaging.simp.stomp.StompHeaderAccessor;
 import org.springframework.messaging.support.ChannelInterceptor;
 import org.springframework.messaging.support.MessageHeaderAccessor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.AuthorityUtils;
 import org.springframework.stereotype.Component;
 
 import io.jsonwebtoken.Claims;
@@ -35,16 +33,11 @@ public class WebSocketAuthInterceptor implements ChannelInterceptor {
         StompHeaderAccessor accessor = MessageHeaderAccessor.getAccessor(message, StompHeaderAccessor.class);
 
         if (accessor != null && StompCommand.CONNECT.equals(accessor.getCommand())) {
-            List<String> authorization = accessor.getNativeHeader("Authorization");
+            List<String> authHeaders = accessor.getNativeHeader("Authorization");
             
-            if (authorization != null && !authorization.isEmpty()) {
-                String jwt = authorization.get(0);
+            if (authHeaders != null && !authHeaders.isEmpty()) {
+                String jwt = authHeaders.getFirst().replace("Bearer ", "");
                 
-                // Remove "Bearer " prefix if present
-                if (jwt.startsWith("Bearer ")) {
-                    jwt = jwt.substring(7);
-                }
-
                 try {
                     SecretKey key = Keys.hmacShaKeyFor(secretKey.getBytes(StandardCharsets.UTF_8));
                     Claims claims = Jwts.parserBuilder()
@@ -53,19 +46,12 @@ public class WebSocketAuthInterceptor implements ChannelInterceptor {
                             .parseClaimsJws(jwt)
                             .getBody();
 
-                    String email = String.valueOf(claims.get("email"));
-                    String authorities = String.valueOf(claims.get("authorities"));
-
-                    List<GrantedAuthority> auths = AuthorityUtils
-                            .commaSeparatedStringToAuthorityList(authorities);
+                    String email = claims.getSubject();
                     
-                    UsernamePasswordAuthenticationToken authentication = 
-                            new UsernamePasswordAuthenticationToken(email, null, auths);
-                    
-                    accessor.setUser(authentication);
+                    // Set user principal (you can extend this to fetch full user details)
+                    accessor.setUser(new UsernamePasswordAuthenticationToken(email, null, List.of()));
                 } catch (Exception e) {
                     System.err.println("WebSocket authentication failed: " + e.getMessage());
-                    // Return null to reject the connection
                     return null;
                 }
             }
